--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-OPENWEATHER_API_KEY=505608c98c2eac268ab1fe547fec83e0
 SECRET_KEY=v-J7PSZsgPrA6Ly6l_-sOWqYMAJ3A4doRJH9Qc5TmSKrmWIsTZ817DHwjuQGsLmM_CQ
 DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
 OPEN_METEO_BASE_URL=https://api.open-meteo.com/v1/forecast
+GEOCODING_API_URL=https://geocoding-api.open-meteo.com/v1/search
